fix: score schema
